<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="ST_TransformationParams" Id="{feec3257-0e48-4c8f-8432-7a4621eee2c7}">
    <Declaration><![CDATA[TYPE ST_TransformationParams :
STRUCT
	eTransformType			: E_TransformationType;
	nPcaComponentNum		: UDINT := 2;
	fPcaRetainedVariance	: LREAL := 0.95;
	nLdaComponentNum		: UDINT := 1;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>